--- a/src/app/admin/shared/components/new-subject/new-subject.component.html
+++ b/src/app/admin/shared/components/new-subject/new-subject.component.html
@@ -7,7 +7,7 @@
     <h2>{{newSubject.subject.name}}</h2>
   </div>
   <div class="actions">
-    <mat-button-toggle-group #group="matButtonToggleGroup" (change)="emitSmth($event)">
+    <mat-button-toggle-group #subj="matButtonToggleGroup" (change)="emitSmth($event)">
       <mat-button-toggle class="apply-button" value="apply">
         apply
       </mat-button-toggle>
