--- a/src/app/admin/shared/components/new-teacher/new-teacher.component.html
+++ b/src/app/admin/shared/components/new-teacher/new-teacher.component.html
@@ -6,7 +6,7 @@
     <h3>{{newTeacher.password}}</h3>
   </div>
   <div class="actions">
-    <mat-button-toggle-group #group="matButtonToggleGroup" (change)="emitSmth($event)">
+    <mat-button-toggle-group #subj="matButtonToggleGroup" (change)="emitSmth($event)">
       <mat-button-toggle class="apply-button" value="apply">
         apply
       </mat-button-toggle>
