--- a/src/app/admin/students/students-page/students-page.component.html
+++ b/src/app/admin/students/students-page/students-page.component.html
@@ -1,7 +1,7 @@
 <div class="form-control">
   <input type="text" placeholder="surname..." [(ngModel)]="strForSearchStudentSurname">
-  <!--  group have to be selectControl-->
-  <input type="text" placeholder="group..." [(ngModel)]="strForSearchStudentGroup">
+  <!--  subj have to be selectControl-->
+  <input type="text" placeholder="subj..." [(ngModel)]="strForSearchStudentGroup">
 </div>
 
 <table *ngIf="isLoaded; else loadingBlock">
